--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+calamine = "0.23.1"
 inquire = "0.6.2"
+rust_xlsxwriter = "0.62.0"
